--- a/src/app/products/containers/product-item/product-item.component.html
+++ b/src/app/products/containers/product-item/product-item.component.html
@@ -1,5 +1,5 @@
 <div class="product-item">
-    <pizza-form [pizza]="pizza" [toppings]="toppings" (selected)="onSelect($event)" (create)="onCreate($event)"
+    <pizza-form [pizza]="pizza$ | async" [toppings]="toppings" (selected)="onSelect($event)" (create)="onCreate($event)"
         (update)="onUpdate($event)" (remove)="onRemove($event)">
         <pizza-display [pizza]="visualise">
         </pizza-display>
