--- a/src/app/products/containers/product-item/product-item.component.html
+++ b/src/app/products/containers/product-item/product-item.component.html
@@ -4,7 +4,7 @@
         [toppings]="toppings$ | async"
         (selected)="onSelect($event)" (create)="onCreate($event)"
         (update)="onUpdate($event)" (remove)="onRemove($event)">
-        <pizza-display [pizza]="visualise">
+        <pizza-display [pizza]="visualise$ | async">
         </pizza-display>
     </pizza-form>
 </div>
